Upgrading jquery.simplemodal-1.3.5 to jquery.simplemodal-1.4.1.

--- a/src/webui/media/Makefile
+++ b/src/webui/media/Makefile
@@ -27,8 +27,8 @@ JS_SOURCES = \
 
 JS_MINIFIED_DEPS = \
 	jquery-ui-1.8.6.custom/js/jquery-ui-1.8.6.custom.min.js \
-	jquery-ui-1.8.6.custom/js/jquery.simplemodal-1.3.5.min.js \
-	jquery-ui-1.8.6.custom/js/jquery.tools.min.js
+	js/jquery.simplemodal-1.4.1.min.js \
+	js/jquery.tools.min.js
 
 CSS_TARGET = css/all.min.css
 JS_TARGET = js/all.min.js
