--- a/src/media/Makefile
+++ b/src/media/Makefile
@@ -59,14 +59,14 @@ minify_css: $(CSS_MINIFIED) $(CSS_MINIFIED_EXTRA)
 minify_js: $(JS_MINIFIED) $(JS_MINIFIED_EXTRA)
 concat_css: $(CSS_TARGET)
 concat_js: $(JS_TARGET)
-	
+
 %.min.css: %.css
 	@echo [css] $<
-	@java -jar ../../../lib/yuicompressor-2.4.2.jar $< -o $@
+	@java -jar ../../lib/yuicompressor-2.4.2.jar $< -o $@
 
 %.min.js: %.js
 	@echo [js] $<
-	@java -jar ../../../lib/yuicompressor-2.4.2.jar $< -o $@
+	@java -jar ../../lib/yuicompressor-2.4.2.jar $< -o $@
 
 $(CSS_TARGET): $(CSS_MINIFIED)
 #	@> $@ # truncate
