Add setup.py. Fix webui.spec. Create users/groups after syncdb, if necessary. Small changes on the settings, manage, and WSGI script.
Conflicts:
	webui.spec

--- a/conf/webui-httpd-vhosts.conf
+++ b/conf/webui-httpd-vhosts.conf
@@ -1,16 +1,14 @@
+Listen 8000
 NameVirtualHost *:8000
 
 <VirtualHost *:8000>
-        Alias /media /usr/share/webui/media
-        Alias /admin_media /usr/lib/python2.6/site-packages/django/contrib/admin/media/
+        Alias /media /usr/share/livemgr-webui/media
+        Alias /admin_media /usr/lib/PYTHON_VERSION/site-packages/django/contrib/admin/media/
 
-        WSGIScriptAlias / /usr/lib/python2.6/site-packages/webui/webui-wsgi.py
+        WSGIScriptAlias / /usr/lib/PYTHON_VERSION/site-packages/webui/webui-wsgi.py
 
         <Location "/">
                 SetHandler wsgi-script
-
-                order deny,allow
-                Allow from all
 
                 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/javascript application/x-javascript text/css
         </Location>
